fixed jumping button

--- a/public/css/courses-form.css
+++ b/public/css/courses-form.css
@@ -156,7 +156,7 @@ a.btn {
 }
 .disabled {
   background: #e2e2e2 !important;
-  border: 0 !important;
+  border: 1px solid #fff !important;
   border-radius: 0 !important;
   color: #888 !important;
   text-decoration: none !important;
